JumpScript/tests/baselines/reference/parserMemberAccessorDeclaration17.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration17.jump(2,13): error TS1051: A 'set' accessor cannot have an optional parameter.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration17.jump (1 errors) ====
    class C {
       set Foo(a?: number) { }
                ~
!!! error TS1051: A 'set' accessor cannot have an optional parameter.
    }